Fix padding issue when the site is loaded on mobile

--- a/static/css/circle.css
+++ b/static/css/circle.css
@@ -11341,7 +11341,7 @@ button.toast-close-button {
 
 #footer .footer-widgets-wrap {
 	position: relative;
-	padding: 80px 0;
+	padding: 40px 0;
 }
 
 .footer-widgets-wrap .col_full,
